--- a/part-13/index.html
+++ b/part-13/index.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Get New Facts</h1>
+    <p id="result"></p>
+    <button id="first">Show new fact</button>
+    <br>
+    <br>
+    <br>
+    <h1>Get Random img</h1>
+    <img id="result"/>
+    <br>
+    <button id="second">Show dog image</button>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
