--- a/part-13/index.html
+++ b/part-13/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Part 12</title>
+    <title>Part 13</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,6 +18,15 @@
     <img id="result"/>
     <br>
     <button id="second">Show dog image</button>
+
+    <br>
+    <br>
+    <br>
+
+
+    <input placeholder="Enter The Country">
+    <button id="third">Search</button>
+    <ul id="list"></ul>
 
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="app.js"></script>
