--- a/part-13/practice.html
+++ b/part-13/practice.html
@@ -7,7 +7,11 @@
     <title>Practice As Home Work</title>
 </head>
 <body>
+    <input placeholder="Enter The State">
+    <button>Search</button>
+    <ul id="list"></ul>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="practice.js"></script>
+    
 </body>
 </html>
